Fixed backdrop filter not working on iPhone

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 #header {
     background-color: #E94560bb;
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     padding: 10px;
     color: white;
     position: sticky;
@@ -47,6 +48,7 @@ header {
     top: 0;
     background-color: #E94560bb;
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     padding: 10px;
     margin: 0;
     color: white;
